# moonlink

./: Cargo.toml  MOONLINK_DATAFUSION_ARCHITECTURE.md  rest_api_auth_design.md  rest_api_file_upload_api_design.md
.github/postgres-init/: 10-replication.sql
.github/workflows/: ci.yml
src/moonlink/src/: error.rs  row.rs
src/moonlink/src/row/: column_array_builder.rs
src/moonlink/src/storage/: iceberg.rs  mooncake_table.rs
src/moonlink/src/storage/cache/: object_storage.rs
src/moonlink/src/storage/filesystem/: accessor.rs
src/moonlink/src/storage/iceberg/: catalog_test_guard.rs  catalog_test_impl.rs  catalog_utils.rs  file_catalog.rs  iceberg_snapshot_fetcher.rs  iceberg_table_loader.rs  iceberg_table_manager.rs  moonlink_catalog.rs  rest_catalog.rs  rest_catalog_test.rs  rest_catalog_test_utils.rs  tests.rs
src/moonlink/src/storage/mooncake_table/: data_batches.rs  snapshot_read_output.rs  (+3 more)
src/moonlink/src/union_read/: read_state_manager.rs
src/moonlink_connectors/: Cargo.toml
src/moonlink_connectors/src/: pg_replicate.rs
src/moonlink_connectors/src/pg_replicate/: conversions.rs  ddl_handler.rs  moonlink_sink.rs  util.rs
src/moonlink_connectors/src/rest_ingest/: json_converter.rs
src/moonlink_datafusion/: Cargo.toml
src/moonlink_datafusion/examples/: segment_elimination_demo.rs
src/moonlink_datafusion/src/: lib.rs  segment_elimination.rs  table_provider.rs
src/moonlink_rpc/: Cargo.toml
src/moonlink_rpc/src/: lib.rs
src/moonlink_service/src/: error.rs  lib.rs  rest_api.rs  rpc_server.rs  util.rs
tests/: test_ddl_replication.rs
(+17 files in other folders)
