[package]
name = "moonlink_rpc"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
bincode = { workspace = true }
moonlink_error = { path = "../moonlink_error" }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
